--- a/src/laravel/composer.json
+++ b/src/laravel/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-debugbar": "^3.13",
         "inertiajs/inertia-laravel": "^1.0",
+        "itsgoingd/clockwork": "^5.2",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
